verif/test/deca/syntax/invalid/nested-block-verif.res
src/test/deca/syntax/invalid/nested-block.deca:14:4: mismatched input '{' expecting {'instanceof', ')', ',', '=', '.', '&&', '||', '<', '>', '<=', '>=', '==', '!=', '+', '-', '*', '/', '%'}
